# primazactl

./: .gitignore  Makefile  README.md
scripts/: requirements.txt  setup.cfg
scripts/src/primazactl/: errors.py  parser.py  primazactl.py  types.py
scripts/src/primazactl/cmd/apply/: agent.py  cluster_environment.py  defaults.py  options.py  parser.py
scripts/src/primazactl/cmd/create/: common.py  parser.py
scripts/src/primazactl/cmd/delete/: parser.py
scripts/src/primazactl/cmd/join/: parser.py
scripts/src/primazactl/cmd/main/: common.py  install.py  parser.py  uninstall.py
scripts/src/primazactl/cmd/options/: agent.py  (+5 more)
scripts/src/primazactl/identity/: kubeidentity.py
scripts/src/primazactl/kube/: constants.py  customnamespaced.py  deployment.py  namespace.py  pod.py  role.py  rolebinding.py  secret.py  serviceaccount.py
scripts/src/primazactl/kubectl/: apply.py  constants.py  manifest.py
scripts/src/primazactl/primaza/: primaza.py  primazacluster.py
scripts/src/primazactl/primazamain/: clusterenvironment.py  constants.py  maincluster.py  primazamain.py
scripts/src/primazactl/primazaworker/: agentnamespace.py  constants.py  primazaworker.py  workercluster.py  workernamespace.py
scripts/src/primazactl/utils/: command.py  kubeconfig.py  kubeconfigwrapper.py  logger.py  names.py  primazaconfig.py  settings.py
scripts/src/primazatest/: rsakey.py  runtest.py
scripts/src/primazatest/config/: kind-main.yaml  kind-worker.yaml  kind.yaml  kind.yamlbak
scripts/src/primazatest/options/: primaza-alice.yaml
scripts/src/primazatest/users/: user.py
(+27 files in other folders)
