[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = rh-primaza-control
version = 0.1.0
author = The Primaza Authors
author_email = primazactl@primaza.io
description = Primaza control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/primaza/primazactl
project_urls =
    Bug Tracker = https://github.com/primaza/primazactl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    PyYAML
    semver

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    primazactl = primazactl.primazactl:main
    primazatest = primazatest.runtest:main
    primazauser = primazatest.users.user:main
